[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "code-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.36",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.10",
    "langchain-core>=1.2.13",
    "langgraph>=1.0.8",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "ruff>=0.15.1",
    "scikit-learn>=1.8.0",
]

[project.scripts]
code-reviewer-graph = "code_reviewer_graph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_reviewer_graph"]
include = [
    "src/code_reviewer_graph/review_rules.md",
    "src/code_reviewer_graph/writer_rules.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "CHANGELOG.md",
    "README.md",
    "pyproject.toml",
    "src/code_reviewer_graph",
]

[tool.ruff]
line-length = 200

[tool.black]
line-length = 200

